# parallel-programming

./: .gitignore
practice_1/: .gitignore  Задание_1_2024.docx
practice_1/practice_1.1/: CMakeLists.txt  build.sh  run.sh
practice_1/practice_1.1/input_text/: Mr._Smith’s_New_Nose.txt  The_Pack_of_Biscuits.txt  What’s_the_Miracle’s_Cost.txt
practice_1/practice_1.1/src/: main.cpp
practice_1/practice_1.2/: CMakeLists.txt  build.bat
practice_1/practice_1.3/: CMakeLists.txt
practice_1/practice_1.4/: CMakeLists.txt  build.sh  run.sh
practice_1/practice_1.5/: CMakeLists.txt
practice_1/practice_1.6/: CMakeLists.txt
practice_1/practice_1.7/: CMakeLists.txt
practice_1/practice_1.8/: CMakeLists.txt
practice_1/src/: main.cpp
practice_2/: Задание_2.docx
practice_2/practice_2.1/: CMakeLists.txt  build.bat
practice_2/practice_2.2/: CMakeLists.txt
practice_2/practice_2.3/: CMakeLists.txt
practice_2/practice_2.4/: CMakeLists.txt
practice_3/: Задание_3.docx
practice_3/practice_3.1/: practice_3.1.cpp  practice_3.1.sln  practice_3.1.vcxproj  practice_3.1.vcxproj.filters
practice_3/practice_3.2/: practice_3.2.cpp  practice_3.2.sln  practice_3.2.vcxproj  practice_3.2.vcxproj.filters
practice_3/practice_3.3/: practice_3.3.cpp  practice_3.3.sln  practice_3.3.vcxproj  practice_3.3.vcxproj.filters
practice_3/practice_3.4/: practice_3.4.cpp  practice_3.4.sln  practice_3.4.vcxproj  practice_3.4.vcxproj.filters
practice_3/practice_3.5/: practice_3.5.cpp  practice_3.5.sln  practice_3.5.vcxproj  (+1 more)
practice_4/: Задание_4_2024_для_слушателей.docx
(+1049 files in other folders)
